Fix toogle menu version mobile

--- a/themes/coders/assets/scss/_navigation.scss
+++ b/themes/coders/assets/scss/_navigation.scss
@@ -1,73 +1,87 @@
 .navigation {
-  height: 6.0rem;
+  height: 6rem;
   width: 100%;
-  a, span {
+
+  a,
+  span {
     display: inline;
     font-size: 1.6rem;
     font-family: $heading-font-family;
     font-weight: 700;
-    line-height: 6.0rem;
+    line-height: 6rem;
     color: $fg-color;
   }
+
   a {
     &:hover,
     &:focus {
-      color: $link-color
+      color: $link-color;
     }
   }
+
   .navigation-title {
     letter-spacing: 0.1rem;
     text-transform: uppercase;
   }
+
   .navigation-list {
     float: right;
     list-style: none;
     margin-bottom: 0;
     margin-top: 0;
-    @media only screen and (max-width : 768px) {
+
+    @media only screen and (max-width: 768px) {
       position: absolute;
-      top: 6.0rem;
+      display: none;
+      top: 6rem;
       right: 0;
+      left: 0;
+      bottom: 0;
       z-index: 5;
-      visibility: hidden;
-      opacity: 0;
-      padding: 0;
-      max-height: 0;
       width: 100%;
-      background-color: $bg-color;
-      border-top: solid 2px $alt-bg-color;
-      border-bottom: solid 2px $alt-bg-color;
-      transition: opacity 0.25s, max-height 0.15s linear;
+      margin: 0 auto;
+      padding: 0;
     }
+
     .navigation-item {
       float: left;
       margin: 0;
       position: relative;
-      @media only screen and (max-width : 768px) {
+
+      @media only screen and (max-width: 768px) {
         float: none !important;
         text-align: center;
-        a, span {
-          line-height: 5.0rem;
+
+        a,
+        span {
+          line-height: 5rem;
         }
       }
-      a, span {
-        margin-left: 1.0rem;
-        margin-right: 1.0rem;
+
+      a,
+      span {
+        margin-left: 1rem;
+        margin-right: 1rem;
       }
     }
+
     .menu-separator {
-      @media only screen and (max-width : 768px) {
+      @media only screen and (max-width: 768px) {
         border-top: 2px solid $fg-color;
-        margin: 0 8.0rem;
+        margin: 0 8rem;
+
         span {
           display: none;
         }
       }
     }
   }
+
   #menu-toggle {
     display: none;
-    @media only screen and (max-width : 768px) {
+
+    @media only screen and (max-width: 768px) {
+      display: inline-block;
       &:checked + label {
         color: $alt-bg-color;
       }
@@ -78,18 +92,21 @@
       }
     }
   }
+
   .menu-button {
     display: none;
-    @media only screen and (max-width : 768px) {
+
+    @media only screen and (max-width: 768px) {
       display: block;
       font-size: 2.4rem;
       font-weight: 400;
-      line-height: 6.0rem;
+      line-height: 6rem;
       color: $fg-color;
       cursor: pointer;
+
       &:hover,
       &:focus {
-        color: $link-color
+        color: $link-color;
       }
     }
   }
